# anybucket

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
src/anybucket/: __init__.py  base.py  config.py  exceptions.py  factory.py  mime.py  results.py  uri.py
src/anybucket/backends/: __init__.py  gcs.py  s3.py
tests/: test_config.py  test_gcs_backend.py  test_minio_integration.py  test_public_api.py  test_s3_backend.py  test_smoke.py  test_uri.py
