[project]
name = "anybucket"
description = "A unified interface over object storage buckets."
authors = [{ name = "Abidán Brito", email = "abidan.brito@gmail.com" }]
maintainers = [{ name = "Abidán Brito", email = "abidan.brito@gmail.com" }]
keywords = ["cloud", "storage", "bucket", "s3", "gcs"]
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/abidanBrito/anybucket"
Issues = "https://github.com/abidanBrito/anybucket/issues"

[project.optional-dependencies]
s3 = ["boto3"]
gcs = ["google-cloud-storage"]
all = ["anybucket[s3,gcs]"]

[dependency-groups]
lint = ["ruff", "pyrefly"]
test = ["pytest"]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
  "pre-commit",
]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.targets.wheel]
packages = ["src/anybucket"]

[tool.hatch.build.targets.sdist]
include = [
    "src/anybucket/**/*.py",
    "src/anybucket/py.typed",
    "README.md"
]

[tool.versioningit]
default-version = "0.0.1"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]

[tool.versioningit.format]
distance = "{base_version}"
dirty = "{base_version}"
distance-dirty = "{base_version}"

[tool.ruff]
indent-width = 4
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "D",   # pydocstyle
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
]
ignore = ["D203", "D213", "RET503"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pyrefly]
project-includes = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
